--- a/angular.json
+++ b/angular.json
@@ -138,6 +138,9 @@
             ],
             "exclude": []
           }
+        },
+        "deploy": {
+          "builder": "angular-cli-ghpages:deploy"
         }
       }
     },
